src/scss/components/_hero.scss
//
// Hero Unit
// -----------------------------------------------------------------------------

.hero-unit {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100vh;
  text-align: center;

  // Hero content
  .hero-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: auto;
    height: 100%;
  }

  // Clip text element
  .clip-text {
    color: $primary-color;
    -webkit-background-clip: text; // stylelint-disable-line
    -webkit-text-fill-color: transparent;

    &::before,
    &::after {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      content: "";
    }

    // Background
    &::before {
      z-index: -2;
      background-image: inherit;
      background-position: inherit;
      background-size: inherit;
      background-repeat: inherit;
      background-attachment: inherit;
    }

    // Overlay
    &::after {
      z-index: -1;
      @include gradient-radial-circle(rgba($black, .3), rgba($black, .9));
    }
  }

  // Clip background element
  .clip-bg {
    background-image: url(../images/hero-unit/grass_field_dawn-portrait.jpg);
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;

    @media (min-width: 768px) {
      background-image: url(../images/hero-unit/grass_field_dawn.jpg);
    }
  }

  // Main title
  .branding {
    width: 100%;
    font-size: 3rem;
    line-height: 1.5;
    letter-spacing: -.025em;
    animation: letterspace ease-in-out 2s infinite;

    @media (min-width: 576px) {
      font-size: 5rem;
    }

    @media (min-width: 768px) {
      font-size: 7.5rem;
    }

    @media (min-width: 1200px) {
      font-size: 10rem;
    }
  }

  .rotate-text {
    display: none;
  }
}

